# bertron

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build-and-push-image.yaml  ci.yml  codacy.yaml  codeql.yaml  deploy-docs.yaml  run_tests.yaml
docs/: README.md
docs/map/: README.md  index.html
emsl/: .gitignore  emsl_data.json  emsl_monet_projects.json  emsl_monet_projects_instance.yaml  fetch_emsl_data.py  get_emsl_datasets.ipynb  get_emsl_projects.ipynb
mongodb/: README.md  ingest_data.py  requirements.txt
mongodb/legacy/: README.md  geo_importer.py  geo_query.py
nmdc/: get_nmdc_biosample_geo_coordinates.ipynb
schema/bertron/linkml/: credit.yaml  search_result.yaml
src/: README.md  bertron_client.py  bertron_schema_pydantic.py  config.py  ingest_data.py  models.py  server.py
src/bertron/: __init__.py
src/bertron/jgi/: __init__.py
src/bertron/nmdc/: __init__.py
src/lib/: helpers.py
src/tests/: conftest.py  test_server.py
tests/: conftest.py  test_api.py  test_docker_compose_constants.py  test_health.py  test_hello.py  test_ingest_data.py  test_server.py
tests/data/: emsl-example.json  ess-dive-example-2.json  ess-dive-example-3.json  ess-dive-example.json  gold-example.json  monet-example.json  nmdc-example.json
web/map/: index.html
