[build-system]
requires = [
  "setuptools >= 65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bertron"
# Project version identifier.
#
# Note: The GitHub Actions workflow in `.github/workflows/build-and-push-image.yaml`
#       will replace this version identifier when building a container image. The
#       replacement will be the name of the Git tag associated with the GitHub Release
#       whose publishing triggered the GitHub Actions workflow run.
#
version = "0.0.0"
authors = [
  {name = "Chuck Parker", email = "ctparker@lbl.gov"},
]
description = " Cross-BER Data Integration"
readme = "README.md"
requires-python = ">=3.10.0,<3.14"
dependencies = [
  "bertron-schema @ git+https://github.com/ber-data/bertron-schema.git",
  # "dtspy @ https://github.com/kbase/dtspy/archive/730828cff3924fc4b2215fe5c1b67bc04aad377f.tar.gz",
  "fastapi[standard]>=0.115.12",
  # `httpx` is a dependency of FastAPI's `TestClient` class, which we use
  # in the server test suite. It is also a dependency of `mongodb/ingest_data.py`,
  # which is why we currently list it as a non-dev dependency.
  "httpx>=0.28.1",
  "jsonschema>=4.0.0",
  "nmdc-api-utilities>=0.3.9",
  "pydantic-settings>=2.10.1",
  "pymongo>=4.13.1",
  "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.386",
    "pytest>=8.4.1",
    "ruff>=0.9.9",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
