[build-system]
requires = [
  "setuptools >= 65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bertron"
# Project version identifier.
#
# Note: The GitHub Actions workflow in `.github/workflows/build-and-push-image.yaml`
#       will replace this version identifier when building a container image. The
#       replacement will be the name of the Git tag associated with the GitHub Release
#       whose publishing triggered the GitHub Actions workflow run.
#
version = "0.0.0"
authors = [
  {name = "Chuck Parker", email = "ctparker@lbl.gov"},
]
description = "Cross-BER Data Integration"
readme = "README.md"
requires-python = ">=3.10.0,<3.14"
dependencies = [
  # Note: To depend upon the package built from the contents of the latest commit on the default branch in the `bertron-schema` repository, use:
  #       "bertron-schema @ git+https://github.com/ber-data/bertron-schema.git"
  #
  # Note: To depend upon the package built from the contents of a specific commit in the `bertron-schema` repository, use:
  #       "bertron-schema @ git+https://github.com/ber-data/bertron-schema.git@{COMMIT_HASH}"
  #
  "bertron-schema @ git+https://github.com/ber-data/bertron-schema.git@82498f5f5cbc71ed7abf71b8e2c01d15c003f8d8",
  # "dtspy @ https://github.com/kbase/dtspy/archive/730828cff3924fc4b2215fe5c1b67bc04aad377f.tar.gz",
  "fastapi[standard]>=0.115.12",
  # `httpx` is a dependency of FastAPI's `TestClient` class, which we use
  # in the server test suite. It is also a dependency of `mongodb/ingest_data.py`,
  # which is why we currently list it as a non-dev dependency.
  "httpx>=0.28.1",
  "jsonschema>=4.0.0",
  "nmdc-api-utilities>=0.3.9",
  "pydantic-settings>=2.10.1",
  "pymongo>=4.13.1",
  # Note: We use `scalar-fastapi` to integrate Scalar API documentation with FastAPI.
  # Note: We use a Git URL to install the `scalar-fastapi` package, because the Scalar
  #       maintainers have not published recent versions of the package to PyPI yet.
  # Reference: https://github.com/scalar/scalar/issues/5337#issuecomment-2781011096
  "scalar-fastapi @ git+https://github.com/scalar/scalar/#subdirectory=integrations/fastapi",
  "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.386",
    "pytest>=8.4.1",
    "ruff>=0.9.9",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

# Configure pytest.
# Docs: https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
# Configure pytest to run doctests, and to ignore directories that contain currently-broken modules.
addopts = "--doctest-modules --ignore='src/bertron/' --ignore='mongodb/legacy/'"
